omni/tests/goldens/types/undefined_ident_11.err
tests/goldens/types/undefined_ident_11.omni:1:20: error: undefined identifier "missing11"
     1 | let result11:int = missing11
       |                    ^^^^^^^^^
     2 | 
  hint: declare the variable with 'let missing11: <type> = <value>' or 'var missing11: <type> = <value>' before using it
